--- a/css/style.css
+++ b/css/style.css
@@ -736,6 +736,11 @@ table .col {
 .cube {
   /* dimensions below are for overall cube shape - each polygon side going to fit within this */
   /* item being each individual side of the cube */ }
+  .cube__header {
+    position: absolute;
+    left: 70%;
+    top: 40%;
+    transform: translate(-50%, -50%); }
   .cube__container {
     /* this section to go from column 8 to the right side of the viewport horzionatally */
     background-color: white;
@@ -746,7 +751,8 @@ table .col {
     /* need to use grid to centre cubes vertically */
     align-items: start;
     /* need to use grid to move cubes to the left horizontally */
-    justify-content: start; }
+    justify-content: start;
+    position: relative; }
   .cube__row {
     /* display inline-flex - makes the flex container display inline */
     /* inline meaning - element display inline - inside the current block on the same line */
