--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -14,13 +14,13 @@
   }
 }
 
-.ptable table {
-  margin: 30px auto;
-  border-collapse: collapse;
-}
-
 .ptable {
-  margin: 0px 0% 30px 0%;
+  display: grid;
+  /* align content horizontally */
+  justify-content: center;
+  /* align content vertically */
+  align-content: center;
+  border-collapse: collapse;
 }
 
 th,
