--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,7 @@ left position as 0. This is for 0 to 5% of the animation */
 
 .table__container {
   display: grid;
-  grid-template-rows: 15rem calc(80vh - 15rem); }
+  grid-template-rows: 5rem calc(80vh - 5rem); }
 
 .table__title {
   grid-row: 1 /2;
@@ -692,24 +692,25 @@ left position as 0. This is for 0 to 5% of the animation */
   justify-content: center;
   /* align content vertically */
   align-content: center;
+  /* collapse all table borders into single border */
   border-collapse: collapse; }
 
 th,
 td {
   padding: 1rem; }
 
-th {
-  background-color: black;
-  color: #0c22e8; }
+tr {
+  background-color: #f9f7f6;
+  font-size: 1.5rem; }
+  tr:hover {
+    background-color: red; }
 
 .wpos {
-  text-align: center; }
-
-.wpos td {
-  color: #77ff21; }
-
-.wpos:hover {
-  background-color: #77ff21; }
+  text-align: center;
+  color: red; }
+  .wpos:hover {
+    cursor: pointer;
+    color: white; }
 
 .wpos:hover td {
   color: #000000; }
