--- a/sass/_games.scss
+++ b/sass/_games.scss
@@ -2,7 +2,7 @@
   &__container {
     grid-column: col-end 7 / full-end;
     display: grid;
-    grid-template-rows: 10rem max-content 10rem;
+    grid-template-rows: 10rem max-content;
   }
   &__title {
     background-color: $color-primary-dark;
@@ -16,7 +16,7 @@
 
 .table {
   &__title {
-    grid-row: 1 /2;
+    grid-row: 1 / 2;
   }
   &__content {
     display: grid;
@@ -53,7 +53,7 @@
 
 th,
 td {
-  padding: 1rem;
+  padding: 1.2rem;
 }
 
 .match {
