--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -7,7 +7,11 @@
 .sea-serpent {
   &__content {
     grid-row: 1 /2;
-    background-image: url(../img/sea-serpent.png);
+    background-image: linear-gradient(
+        rgba($color-grey-1, 0.3),
+        rgba($color-grey-1, 0.3)
+      ),
+      url(../img/sea-serpent.png);
     background-repeat: no-repeat;
     /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
     right corner = 100% 100% */
