sizing issue on first glance of design resolved

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -676,10 +676,9 @@ left position as 0. This is for 0 to 5% of the animation */
 .games__container {
   grid-column: col-end 7 / full-end;
   display: grid;
-  grid-template-rows: 10rem 1fr; }
+  grid-template-rows: 10rem max-content; }
 
 .games__title {
-  grid-row: 1 /2;
   background-color: #0a19a1;
   display: flex;
   /* align title horizontally */
@@ -687,15 +686,17 @@ left position as 0. This is for 0 to 5% of the animation */
   /* align title vertically */
   align-items: center; }
 
+.table__title {
+  grid-row: 1 / 2; }
+
 .table__content {
   display: grid;
   /* aligin content vertically at start */
   align-content: start;
   /* collapse all table borders into single border */
-  border-collapse: collapse;
-  border: 3px; }
+  border-collapse: collapse; }
 
-.table__headers {
+.table__header {
   background-color: #aaa;
   font-size: 1.5rem; }
 
@@ -716,13 +717,10 @@ left position as 0. This is for 0 to 5% of the animation */
 
 th,
 td {
-  padding: 1rem; }
+  padding: 1.2rem; }
 
-.wpos:hover td {
-  color: #000000; }
-
-table .col {
-  border-bottom: 1px solid #ffffff; }
+.match__title {
+  grid-row: 3 / 4; }
 
 .ss-corp__container {
   grid-column: col-end 4 / col-end 7;
@@ -731,7 +729,7 @@ table .col {
 
 .sea-serpent__content {
   grid-row: 1 /2;
-  background-image: url(../img/sea-serpent.png);
+  background-image: linear-gradient(rgba(12, 34, 232, 0.2), rgba(10, 25, 161, 0.5)), url(../img/sea-serpent.png);
   background-repeat: no-repeat;
   /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
     right corner = 100% 100% */
