--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 .container {
   display: grid;
   /* comments for the grid-template-rows */
-  grid-template-rows: 10rem 10rem 80vh 80vh min-content repeat(2, min-content);
+  grid-template-rows: 10rem 10rem calc(100vh - 20rem) 80vh min-content repeat(2, min-content);
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   /* AFTER NOTES */ }
   @media only screen and (max-width: 87.5em) {
@@ -745,8 +745,9 @@ td {
   .cube__header {
     position: absolute;
     left: 70%;
-    top: 40%;
-    transform: translate(-50%, -50%); }
+    top: 20%;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase; }
   .cube__container {
     /* this section to go from column 8 to the right side of the viewport horzionatally */
     background-color: white;
@@ -755,7 +756,7 @@ td {
     overflow: hidden;
     display: grid;
     /* need to use grid to centre cubes vertically */
-    align-items: start;
+    align-items: end;
     /* need to use grid to move cubes to the left horizontally */
     justify-content: start;
     position: relative; }
@@ -767,8 +768,8 @@ td {
     opacity: 0.9; }
   .cube__shape {
     position: relative;
-    width: 5rem;
-    height: 5rem; }
+    width: 4.5rem;
+    height: 4.5rem; }
   .cube__item {
     position: absolute;
     top: 0;
