--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -27,8 +27,9 @@
   &__header {
     position: absolute;
     left: 70%;
-    top: 40%;
+    top: 20%;
     transform: translate(-50%, -50%);
+    text-transform: uppercase;
   }
   &__container {
     /* this section to go from column 8 to the right side of the viewport horzionatally */
@@ -38,7 +39,7 @@
     overflow: hidden;
     display: grid;
     /* need to use grid to centre cubes vertically */
-    align-items: start;
+    align-items: end;
     /* need to use grid to move cubes to the left horizontally */
     justify-content: start;
     position: relative;
@@ -53,8 +54,8 @@
   /* dimensions below are for overall cube shape - each polygon side going to fit within this */
   &__shape {
     position: relative;
-    width: 5rem;
-    height: 5rem;
+    width: 4.5rem;
+    height: 4.5rem;
   }
   /* item being each individual side of the cube */
   &__item {
